--- a/project.html
+++ b/project.html
@@ -117,65 +117,70 @@
 
 
         <!-- Project Start -->
-        <div class="container-fluid py-5">
-            <div class="container py-5">
-                <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Licence</h5>
-                    <h1 class="display-5">Our recently completed projects</h1>
+<div class="container-fluid py-5">
+    <div class="container py-5">
+        <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
+            <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Licence</h5>
+            <h1 class="display-5">Our recently completed projects</h1>
+        </div>
+        <div class="row g-5">
+            <!-- Project 1 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <a href="img/BRISK PEST UDYAM.pdf" target="_blank" class="pdf-link">
+                        <embed src="img/pdf-icon.png" type="image/png" class="img-fluid h-100" alt="pdf">
+                    </a>
+                    <div class="text-center">
+                        <a href="img/BRISK PEST UDYAM.pdf" target="_blank" class="fs-4 fw-bold text-center pdf-link">Whole Home Sanitizing</a>
+                        <div class="pdf-options">
+                            <a href="img/BRISK PEST UDYAM.pdf" target="_blank" class="preview-link">Preview</a>
+                            <a href="img/BRISK PEST UDYAM.pdf" download="BRISK PEST UDYAM.pdf" class="download-link">Download</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="row g-5">
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-1.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Whole Home Sanitizing</a>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <a href="img/BRISK PEST.pdf" target="_blank" class="pdf-link">
+                        <embed src="img/pdf-icon.png" type="image/png" class="img-fluid h-100" alt="pdf">
+                    </a>
+                    <div class="text-center">
+                        <a href="img/BRISK PEST.pdf" target="_blank" class="fs-4 fw-bold text-center pdf-link">Education center Cleaning</a>
+                        <div class="pdf-options">
+                            <a href="img/BRISK PEST.pdf" target="_blank" class="preview-link">Preview</a>
+                            <a href="img/BRISK PEST.pdf" download="BRISK PEST.pdf" class="download-link">Download</a>
                         </div>
                     </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-2.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Education center Cleaning</a>
-                        </div>
-                    </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-3.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Warehouse Cleaning</a>
-                        </div>
-                    </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-4.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Hospital Cleaning</a>
-                        </div>
-                    </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-5.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Factory Cleaning</a>
-                        </div>
-                    </div>
-                    <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                        <div class="project-item">
-                            <div class="project-left bg-dark"></div>
-                            <div class="project-right bg-dark"></div>
-                            <img src="img/project-6.jpg" class="img-fluid h-100" alt="img">
-                            <a href="" class="fs-4 fw-bold text-center">Furniture Sanitizing</a>
+                </div>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
+                <div class="project-item">
+                    <div class="project-left bg-dark"></div>
+                    <div class="project-right bg-dark"></div>
+                    <a href="img/Brisk GST.pdf" target="_blank" class="pdf-link">
+                        <embed src="img/pdf-icon.png" type="image/png" class="img-fluid h-100" alt="pdf">
+                    </a>
+                    <div class="text-center">
+                        <a href="img/Brisk GST.pdf" target="_blank" class="fs-4 fw-bold text-center pdf-link">Warehouse Cleaning</a>
+                        <div class="pdf-options">
+                            <a href="img/Brisk GST.pdf" target="_blank" class="preview-link">Preview</a>
+                            <a href="img/Brisk GST.pdf" download="Brisk GST.pdf" class="download-link">Download</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Project End -->
+    </div>
+</div>
+<!-- Project End -->
 
 
         <!-- Footer Start -->
