--- a/project.html
+++ b/project.html
@@ -124,63 +124,25 @@
             <h1 class="display-5">Our recently completed projects</h1>
         </div>
         <div class="row g-5">
-            <!-- Project 1 -->
-            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".3s">
-                <div class="project-item">
-                    <div class="project-left bg-dark"></div>
-                    <div class="project-right bg-dark"></div>
-                    <a href="img/BRISK PEST UDYAM.pdf" target="_blank" class="pdf-link">
-                        <embed src="img/pdf-icon.png" type="image/png" class="img-fluid h-100" alt="pdf">
-                    </a>
-                    <div class="text-center">
-                        <a href="img/BRISK PEST UDYAM.pdf" target="_blank" class="fs-4 fw-bold text-center pdf-link">Whole Home Sanitizing</a>
-                        <div class="pdf-options">
-                            <a href="img/BRISK PEST UDYAM.pdf" target="_blank" class="preview-link">Preview</a>
-                            <a href="img/BRISK PEST UDYAM.pdf" download="BRISK PEST UDYAM.pdf" class="download-link">Download</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!-- PDF 1: BRISK PEST UDYAM.pdf -->
+<a href="img/BRISK PEST UDYAM.pdf" target="_blank" rel="noopener noreferrer" download>Download PDF 1</a> | 
+<a href="img/BRISK PEST UDYAM.pdf" target="_blank" rel="noopener noreferrer">Preview PDF 1</a>
 
-            <!-- Project 2 -->
-            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".5s">
-                <div class="project-item">
-                    <div class="project-left bg-dark"></div>
-                    <div class="project-right bg-dark"></div>
-                    <a href="img/BRISK PEST.pdf" target="_blank" class="pdf-link">
-                        <embed src="img/pdf-icon.png" type="image/png" class="img-fluid h-100" alt="pdf">
-                    </a>
-                    <div class="text-center">
-                        <a href="img/BRISK PEST.pdf" target="_blank" class="fs-4 fw-bold text-center pdf-link">Education center Cleaning</a>
-                        <div class="pdf-options">
-                            <a href="img/BRISK PEST.pdf" target="_blank" class="preview-link">Preview</a>
-                            <a href="img/BRISK PEST.pdf" download="BRISK PEST.pdf" class="download-link">Download</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<br>
 
-            <!-- Project 3 -->
-            <div class="col-xxl-4 col-lg-6 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay=".7s">
-                <div class="project-item">
-                    <div class="project-left bg-dark"></div>
-                    <div class="project-right bg-dark"></div>
-                    <a href="img/Brisk GST.pdf" target="_blank" class="pdf-link">
-                        <embed src="img/pdf-icon.png" type="image/png" class="img-fluid h-100" alt="pdf">
-                    </a>
-                    <div class="text-center">
-                        <a href="img/Brisk GST.pdf" target="_blank" class="fs-4 fw-bold text-center pdf-link">Warehouse Cleaning</a>
-                        <div class="pdf-options">
-                            <a href="img/Brisk GST.pdf" target="_blank" class="preview-link">Preview</a>
-                            <a href="img/Brisk GST.pdf" download="Brisk GST.pdf" class="download-link">Download</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Project End -->
+<!-- PDF 2: BRISK PEST.pdf -->
+<a href="img/BRISK PEST.pdf" target="_blank" rel="noopener noreferrer" download>Download PDF 2</a> | 
+<a href="img/BRISK PEST.pdf" target="_blank" rel="noopener noreferrer">Preview PDF 2</a>
+
+<br>
+
+<!-- PDF 3: Brisk GST.pdf -->
+<a href="img/Brisk GST.pdf" target="_blank" rel="noopener noreferrer" download>Download PDF 3</a> | 
+<a href="img/Brisk GST.pdf" target="_blank" rel="noopener noreferrer">Preview PDF 3</a>
+
+</body>
+</html>
+
 
 
         <!-- Footer Start -->
