--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="container">
                 <nav class="navbar navbar-dark navbar-expand-lg py-lg-0">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="text-primary mb-0 display-5">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
+                        <h1 class="text-primary mb-0 display-5" style="font-size: 2rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
                     </a>
                     <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-dark"></span>
