--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="container">
                 <div class="d-flex justify-content-between topbar py-2">
                     <div class="d-flex align-items-center flex-shrink-0 topbar-info">
-                        <a href="#" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>India</a>
-                        <a href="#" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>+919900102056</a>
-                        <a href="#" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>sunaif@gmail.com</a>
+                        <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
+                        <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
+                        <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
                     </div>
                     <div class="text-end pe-4 me-4 border-end border-dark search-btn">
                         <div class="search-form">
@@ -74,10 +74,9 @@
                         </div>
                     </div>
                     <div class="d-flex align-items-center justify-content-center topbar-icon">
-                        <a href="#" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
-                        <a href="#" class="me-4"><i class="fab fa-twitter text-dark"></i></a>
-                        <a href="#" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
-                        <a href="#" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
+                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
+                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
+                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
                     </div>
                 </div>
             </div>
@@ -101,11 +100,6 @@
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="project.html" class="nav-item nav-link">Licence</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                                <div class="dropdown-menu m-0 bg-primary">
-                                </div>
-                            </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
@@ -159,29 +153,27 @@
   </style>
 </head>
 <body>
-
-<div align="center">
-  <img src="img/brisklogo.png" alt="Brisk Pest Control" length="60", width="30%">
+        <div align="center">
+        <img src="img/brisklogo.png" alt="Brisk Pest Control" length="60", width="30%">
+      </div>
+    </div>
+  </div>
 </div>
-</div>
-</div>
-</div>
-<div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
-<div class="about-item overflow-hidden">
-<h2 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h2>
-<h1 class="display-5 mb-2">World Best Pest Control Services Since 2017</h1>
-<p class="fs-5" style="text-align: justify;">Brisk Pest Management Service - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way. Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
-<div class="row">
-<div class="col-3">
-<div class="text-center">
-<div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-<i class="fas fa-city fa-4x text-primary"></i>
-</div>
-<div class="my-2">
-<h5>Building</h5>
-<h5>Cleaning</h5>
-</div>
-</div>
+        <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
+        <div class="about-item overflow-hidden">
+        <h2 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h2>
+        <h1 class="display-5 mb-2">Pest Control Services Since 2017</h1>
+        <p class="fs-6 fw-bold" style="text-align: justify;">Brisk Pest Management - A leading pest control service in India. We are committed to sustainable pest control, providing services nationwide. Our offerings include Housekeeping, Catering, Utilities, Garden and Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Manpower Supply.</p>
+        <div class="col-3">
+        <div class="text-center">
+        <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
+        <i class="fas fa-city fa-4x text-primary"></i>
+      </div>
+        <div class="my-2">
+        <h5>Building</h5>
+        <h5>Cleaning</h5>
+      </div>
+  </div>
 </div>
 <div class="col-3">
 <div class="text-center">
@@ -457,14 +449,14 @@
             <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h1>
         </div>
         <h2 class="display-5 w-50 mx-auto">Why Choose Us</h2>
-        <p>Our specialist Entomologists deliver inspections and audits on a regular basis to provide you with an appropriate standard quality management system. Our documented processes aim to reduce risk in your business.</p>
+        <p>Our expert Entomologists conduct regular inspections and audits, ensuring a high-quality management system. Our documented processes are designed to minimize risks in your business.</p>
     </div>
 </div>
 
 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay=".5s">
     <div class="testimonial-item">
         <div class="testimonial-content rounded mb-4 p-4">
-            <p class="fs-5 m-0">Welcome to BRISK PEST SERVICE, where your peace of mind is our top priority. Our dedicated team of experts is committed to providing superior pest control solutions tailored to your needs. With our comprehensive services, cutting-edge techniques, and eco-friendly practices, we guarantee 100% satisfaction in safeguarding your home or business from pests. Trust us for a pest-free environment, backed by our unwavering commitment to your complete satisfaction</p>
+            <p class="fs-5 m-0">Welcome to BRISK PEST SERVICE—your dedicated partner for superior, eco-friendly pest control. Guaranteed satisfaction for a pest-free space.</p>
         </div>
         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
             <div class="position-relative">
@@ -479,7 +471,7 @@
 
     <div class="testimonial-item">
         <div class="testimonial-content rounded mb-4 p-4">
-            <p class="fs-5 m-0">Brisk Pest Management: Your premier solution for top-tier, eco-friendly pest control. Our experts ensure an impeccably pest-free environment, offering 24/7 Emergency Services for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
+            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with 24/7 Emergency Services for your peace of mind. Experience excellence with us, where expertise meets dedication.</p>
         </div>
         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
             <div class="position-relative">
@@ -494,7 +486,7 @@
 
     <div class="testimonial-item">
         <div class="testimonial-content rounded mb-4 p-4">
-            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier solution for eco-friendly pest control. Our experts ensure an impeccably pest-free environment, featuring Straight Forward Pricing for your peace of mind. Experience excellence with Brisk Pest Management – where expertise meets dedication.</p>
+            <p class="fs-5 m-0">Brisk Pest Management: Your top-tier, eco-friendly pest control solution. Our experts guarantee a pest-free environment, with Straight Forward Pricing for peace of mind. Experience excellence where expertise meets dedication.</p>
         </div>
         <div class="d-flex align-items-center  mb-4" style="padding: 0 0 0 25px;">
             <div class="position-relative">
@@ -525,10 +517,10 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Usefull Link</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>About Us</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Contact Us</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Our Services</a>
-                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Terms & Condition</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/about.html"><i class="fa fa-check me-2"></i>About Us</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/service.html"><i class="fa fa-check me-2"></i>Our Services</a>
+                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/project.html"><i class="fa fa-check me-2"></i>Licence</a>
                             </div>
                         </div>
                     </div>
@@ -553,9 +545,9 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Contact Us</h4>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 pb-3 border-bottom rounded-0"><i class="fa fa-map-marker-alt me-3"></i>banglore, india</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-phone-alt me-3"></i>++919900102056</a>
-                            <a href="" class="btn btn-link w-100 text-start ps-0 py-3 border-bottom rounded-0"><i class="fa fa-envelope me-3"></i>sunaif@gmail.com</a>
+                            <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
+                            <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
+                            <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
                         </div>
                     </div>
                 </div>
@@ -570,18 +562,14 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                        <a href="#" class="text-primary mb-0 display-6">Brisk<span class="text-white">group of companies</span><i class=""></i></a>
+                        <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
                     </div>
                     <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
+                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
+                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
                     </div>
                     <div class="col-md-4 my-auto text-center text-md-end text-white">
-                        <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                        <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                        <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
                         Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a>
                     </div>
                 </div>
