--- a/index.html
+++ b/index.html
@@ -159,62 +159,50 @@
     </div>
   </div>
 </div>
-        <div class="col-lg-6 col-md-12 wow fadeInUp" data-wow-delay=".9s">
-        <div class="about-item overflow-hidden">
-        <h2 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">About brisk</h2>
-        <h1 class="display-5 mb-2">Pest Control Services Since 2017</h1>
-        <p class="fs-6 fw-bold" style="text-align: justify;">Brisk Pest Management - A leading pest control service in India. We are committed to sustainable pest control, providing services nationwide. Our offerings include Housekeeping, Catering, Utilities, Garden and Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Manpower Supply.</p>
-        <div class="col-3">
+       <div class="container-fluid testimonial py-5">
+    <div class="container py-5">
+        <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
+            <h1 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Features</h1>
+        </div>
+        <h2 class="display-5 w-50 mx-auto">Why Choose Us</h2>
+        <p>Brisk Pest Management - A leading pest control service in India. We are committed to sustainable pest control, providing services nationwide. Our offerings include Housekeeping, Catering, Utilities, Garden and Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Manpower Supply.</p>
+    </div>
+</div>
+        <div class="d-flex my-2">
+    <div class="col-3">
         <div class="text-center">
-        <div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-        <i class="fas fa-city fa-4x text-primary"></i>
-      </div>
-        <div class="my-2">
-        <h5>Building</h5>
-        <h5>Cleaning</h5>
-      </div>
-  </div>
+            <div class="p-4 bg-dark rounded d-flex align-items-center justify-content-center">
+                <i class="fas fa-school fa-4x text-primary"></i>
+            </div>
+            <div class="my-2">
+                <h5 class="text-center">Education</h5>
+                <h5 class="text-center">center</h5>
+            </div>
+        </div>
+    </div>
+    <div class="col-3">
+        <div class="text-center">
+            <div class="p-4 bg-dark rounded d-flex align-items-center justify-content-center">
+                <i class="fas fa-warehouse fa-4x text-primary"></i>
+            </div>
+            <div class="my-2">
+                <h5 class="text-center">Warehouse</h5>
+                <h5 class="text-center">Cleaning</h5>
+            </div>
+        </div>
+    </div>
+    <div class="col-3">
+        <div class="text-center">
+            <div class="p-4 bg-dark rounded d-flex align-items-center justify-content-center">
+                <i class="fas fa-hospital fa-4x text-primary"></i>
+            </div>
+            <div class="my-2">
+                <h5 class="text-center">Hospital</h5>
+                <h5 class="text-center">Cleaning</h5>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="col-3">
-<div class="text-center">
-<div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-<i class="fas fa-school fa-4x text-primary"></i>
-</div>
-<div class="my-2">
-<h5>Education</h5>
-<h5>center</h5>
-</div>
-</div>
-</div>
-<div class="col-3">
-<div class="text-center">
-<div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-<i class="fas fa-warehouse fa-4x text-primary"></i>
-</div>
-<div class="my-2">
-<h5>Warehouse</h5>
-<h5>Cleaning</h5>
-</div>
-</div>
-</div>
-<div class="col-3">
-<div class="text-center">
-<div class="p-4 bg-dark rounded d-flex" style="align-items: center; justify-content: center;">
-<i class="fas fa-hospital fa-4x text-primary"></i>
-</div>
-<div class="my-2">
-<h5>Hospital</h5>
-<h5>Cleaning</h5>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- About End -->
 
 
         <!-- Project Start -->
